Small fixes to remove warnings